themes/Papyrus/static/css/stylesheet.css
html {
    font-family: "Verdana", "Arial", "Liberation Sans", sans-serif;
    font-size: 11pt;
    background-color: #ddd;
    padding: 0;
    margin: 0;
    line-height: 1.4em;
}

body {
    max-width: 60em;
    margin: 2em auto;
    padding: 0em 0em 0em 0em; 
}

#page {
    background-color: white;
    color: #211;
    padding: 2em 2em 2em 2em; 
}

pre, code {
    font-family: "Consolas", "Lucida Console", "DejaVu Sans Mono", monospace;
    font-size: 0.9em;
    color: #555;
}

pre {
    margin: 2em 0;
    padding: 1em;
    background-color: #eee;
    overflow: auto;
}

#content {
    max-width: 40em;
    margin: 0 auto;
    padding: 0;
}

header a {
  text-decoration: none;
}

header h1 {
    font-size: 1em;
    font-weight: normal;
    text-align: left;
    position: relative;
    padding: 0 0 0.5em 0;
    border-bottom: 1px solid #211;
}

header h1:before {
    float: right;
    color: #555;
    text-align: right;
    padding-top: 0.2em;
}

header h1:after {
    clear: both;
    content: " ";
}

h1 {
    font-size: 1.1em;
    font-weight: bold;
    xfont-weight: normal;
    margin: 2em 0 1em 0;
    text-align: center;
}


h2 {
    font-size: 1em;
    font-weight: bold;
    margin: 2em 0 1em 0;
    text-align: center;
}


h3 {
    font-size: 1em;
    font-style: italic;
    margin: 2em 0 1em 0;
}

.subtitle {
    display: none;
}

.webinfo {
    background-color: #ddd;
    text-align: center;
    margin-bottom: 1em;
}

.webinfo a {
    color: #000;
    text-decoration: none;
}


.footer {
    text-align: center;
    font-size: 8pt;
    margin-top: 1em;
}

.topnav {
    text-align: right;
    font-size: 0.8em;
    margin-bottom: 7em;
}

.topnav p, .subnav p {
    xdisplay: inline-block;
    margin: 0;
    padding: 0;
}

.topnav a, .subnav a {
    display: inline-block;
    margin: 0 0 0 1em;
    padding: 0;
    text-decoration: none;
}

.topnav a:after, .subnav a:after {
    content: " »";
}

.subnav {
    text-align: right;
    margin-top: 4em;
}


a {
    color: #555;
    text-decoration: underline;
}

a.selected {
    font-weight: bold; 
}

.team .figure {
    position: relative;
}

.team img {
    box-sizing: border-box;
    width: 100%;
    max-width: 30em;
}

@media (min-width: 48em) {
    .two-columns .outline-3 {
        width: 18em;
        display: inline-block;
        vertical-align: top;
    }
    .two-columns .outline-3 h3 {
        margin-top: 1em;
    }

    .two-columns .outline-3:nth-child(2n) {
        margin-left: 3em;
    }
}

@media (max-width: 600px) {
    body {
        padding: 1em;
    }

    #outline-container-orgheadline1 h2 {
        margin-top: 4em;
    }
}

.meta {
    font-size: 0.8em;
    text-align: center;
    font-weight: 200;
}

ul.meta {margin: 0 auto; text-align: center;}
ul.meta li {display: inline;    }
ul.meta li:after {content: " \02043";}
ul.meta li:last-child:after { content: "";}

.categories ul {margin: 0 auto; text-align: left;}
.categories li {display: inline;        }
.categories li:after {content: " \02043";}
.categories li:last-child:after { content: "";}


.toc li {
    position:relative;
    background: url(/images/dot.gif) repeat-x bottom;
    margin: 0 0 5px 0;
    padding: 0 0 0 3px;
}

.toc-date {
    position: absolute;
    display: inline-block;
    bottom: 0; right: 0;
    padding: 0 3px 0 0;
    background: #fff;
}
.toc-link {
    background: #fff;}

.link:after {
    content:'';
    display: inline-block;
    width: 70px;
    height: 10px;
    background: url(/images/dot.gif) repeat-x bottom;
    margin: 0 0 -5px 0;
}

ul.toc {
    list-style-type: none;
    padding-left: 0;
}​

blockquote {

}
blockquote {
    font-family: "Cambria", "Times New Roman", serif;
    font-style: italic;
    font-size: 1.1em;

}


figure {
    font-family: "Consolas", "Arial", monospaced;
}

figcaption {
    font-size: 1em;
    font-style: italic;
    margin-top: 1em;
    margin-bottom: 1em;
}



/** Remove borders within the table body **/
table {
    border-collapse: collapse;
    border: none;
}

th, td {
    padding-left: 0.3em;
    padding-right: 0.3em;

}

td {
    vertical-align: top;
}

th {
    vertical-align: bottom;
}

/** Add a top border to the table header row **/
table thead tr:first-child {
    border-top: 1px solid black;
}

/** Add a top border to the table header row **/
table thead tr:last-child {
  border-bottom: 1px solid black;
}


/** Add a bottom border to the table body **/
table tbody tr:last-child  {
  border-bottom: 1px solid black;
}


/** Make the table header row a normal weight; not bold **/
table th{
  font-weight: normal;
}


/** My column framework **/

.columns {
    display: flex;
}

.column {
  flex-grow: 1;
}

.column + .column {
  margin-left: 2%;
}

.is-centered {
    justify-content: center;
}

.is-left {
    justify-content: flex-start;
}

.is-right {
    justify-content: flex-end;
}

.has-text-left {
    text-align: left;
}

.has-text-right {
    text-align: right;
}

.has-text-center {
    text-align: center;
}

#webmentions img { max-height: 1.2em; margin-right: -1ex; }

#hcard-Peter-Smith a {
  text-decoration: none;
}

img {
  max-width: 100%;
  height: auto;
}


/*****************
Sort out my footer
******************/

footer .channels {
	padding-top: 0.4em;
        padding-bottom: 0.4em;
        border-top: 1px rgba(180,180,180,0.6) solid;
        border-bottom: 1px rgba(180,180,180,0.6) solid;
}

footer ul.footer-links {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

footer ul.footer-links li {
    margin: 0;
    padding: 0;
    flex: auto;
    text-align: center;
}


i.icon {
    margin-right: 0;
}
i.icon, i.icons {
    font-size: 1em;
}
i.icon {
    display: inline-block;
    opacity: 1;
    margin: 0 .25rem 0 0;
    width: 1.18em;
    height: 1em;
    font-family: Icons;
    font-style: normal;
    font-weight: 400;
    text-decoration: inherit;
    text-align: center;
    backface-visibility: hidden;
}
.metainfo {
    margin-top: 1em;
    padding-bottom: 0.4em;
    border-top: 1px rgba(180,180,180,0.6) solid;
    font-size: 8pt;
    font-weight: 100;
    line-height: 0.8em;
    color: #888;
}

.metainfo a {
    text-decoration: none;
}


.metainfo hr {
  border-top: 8px solid #bbb;
  border-radius: 5px;
  width="30%";
  align="center"
}

